# disputauble

./: README.md  add_bao.yaml  add_bao_sne.yaml  add_data.sh  create_cobaya_env.sh  do_analysis.py  do_analysis.sh  make_plots.py  minimize.sh  pact_tau=0.06.yaml  pact_tau=0.06_w0wa.yaml  pact_tau=0.09.yaml  pact_tau=0.09_w0wa.yaml  pyproject.toml  run_chains.sh  setup.py  write_paper.sh
defaults/: bao.yaml  camb.yaml  camb_mnu-eff.yaml  camb_mnu-eff_nuDegenerate.yaml  camb_nuDegenerate.yaml  cmb-l.yaml  cmb-lowl_Planck2018.yaml  cmb-p.yaml  lcdm-lite.yaml  lcdm.yaml  mcmc_sampler.yaml  minimizer_precision.yaml  mnu=0.06.yaml  mnu>0.00.yaml  mnu>0.06.yaml  mnu_eff.yaml  omk+w0wa.yaml  omk.yaml  tau=0.06.yaml  tau=0.08_fixed.yaml  tau=0.09.yaml  w0wa.yaml
disputauble/: __init__.py  cobaya_CAMB_mnuEff.py
mnu>0/: baseline_mnu>0_tau=0.06.yaml  baseline_mnu>0_tau=0.09.yaml  baseline_mnu>0_tau=PlanckLowl.yaml  baseline_mnu>0_tau=free.yaml
mnu>0.06/: baseline_mnu>0.06_tau=0.06.yaml  baseline_mnu>0.06_tau=0.09.yaml  baseline_mnu>0.06_tau=PlanckLowl.yaml  baseline_mnu>0.06_tau=free.yaml
params/: baseline_parameters.yaml  mnu_param_gtr0.yaml  tau=0.09.yaml  tau_param_free.yaml  w0wa_default.yaml
theory/: camb.yaml  cosmo_cobaya.yaml
yamls/: baseline_mnu=0.06_tau=0.09.yaml  lcdm-lite_mnu=0.06_tau=0.06_bao.yaml  lcdm_mnu=0.06_tau=0.06_cmb-p+cmb-l+bao.yaml  lcdm_mnu=0.06_tau=0.06_cmb-p+cmb-l.yaml  lcdm_mnu=0.06_tau=0.09_cmb-p+cmb-l+bao.yaml  lcdm_mnu=0.06_tau=0.09_cmb-p+cmb-l.yaml  lcdm_mnu=0.06_tau=free_cmb-p+cmb-l+bao.yaml  lcdm_mnu=0.06_tau=free_cmb-p+cmb-l.yaml  (+21 more)
(+28 files in other folders)
